--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -5,15 +5,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@engine.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.EngineController">
@@ -50,30 +52,34 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchor-section">
                      <children>
-                        <SplitPane dividerPositions="0.33" prefHeight="200.0" prefWidth="200.0" style="-fx-color: -fx-default-dark; -fx-box-border: -fx-default-dark; -fx-background-color: -fx-default-light;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <items>
-                              <AnchorPane>
+                        <SplitPane dividerPositions="0.5" layoutX="376.0" layoutY="156.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" styleClass="default-split-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <ListView id="texturesList" fx:id="texturesList" prefHeight="314.0" prefWidth="200.0" style="-fx-background-color: -fx-default-medium; -fx-font-family: sans-serif;" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <HBox layoutY="313.0" prefHeight="27.0" prefWidth="176.0" style="-fx-background-color: -fx-default-medium;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                       <children>
-                                          <Button fx:id="newTextureButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="New" HBox.hgrow="ALWAYS" />
-                                          <Button fx:id="deleteTextureButton" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" style="-fx-background-color: #f55442; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Delete" HBox.hgrow="ALWAYS" />
-                                       </children>
-                                    </HBox>
+                                    <ScrollPane layoutX="27.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="250.0" prefWidth="796.0">
+                                             <children>
+                                                <GridPane gridLinesVisible="true" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                  <columnConstraints>
+                                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                  </columnConstraints>
+                                                  <rowConstraints>
+                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                  </rowConstraints>
+                                                </GridPane>
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </ScrollPane>
                                  </children>
                               </AnchorPane>
-                              <AnchorPane fx:id="textureInteractables" prefHeight="281.0" prefWidth="422.0" style="-fx-background-color: -fx-default-light;">
-                                 <children>
-                                    <Label layoutX="26.0" layoutY="17.0" styleClass="default-label" text="Name:" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="17.0" />
-                                    <TextField fx:id="textureField" layoutX="92.0" layoutY="14.0" prefHeight="27.0" prefWidth="135.0" styleClass="default-text-field" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="14.0" />
-                                    <ImageView fx:id="textureImageView" fitHeight="150.0" fitWidth="200.0" layoutX="98.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="98.0" AnchorPane.rightAnchor="98.0" AnchorPane.topAnchor="150.0" />
-                                     <Button fx:id="saveTextureButton" layoutX="353.0" layoutY="14.0" mnemonicParsing="false" style="-fx-background-color: #228B22; -fx-cursor: hand; -fx-font-family: sans-serif;" text="Save" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="14.0" HBox.hgrow="ALWAYS" />
-                                    <Label layoutX="6.0" layoutY="56.0" styleClass="default-label" text="Location:" AnchorPane.leftAnchor="6.0" AnchorPane.topAnchor="56.0" />
-                                    <TextField fx:id="textureLocationField" layoutX="90.0" layoutY="53.0" prefHeight="27.0" prefWidth="242.0" styleClass="default-text-field" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="53.0" />
-                                    <Button fx:id="chooseTextureButton" layoutX="347.0" layoutY="53.0" mnemonicParsing="false" styleClass="default-button" text="Choose" AnchorPane.leftAnchor="347.0" AnchorPane.topAnchor="53.0" />
-                                 </children></AnchorPane>
-                           </items>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+                          </items>
                         </SplitPane>
                      </children></AnchorPane>
             </content>
