Displaying the textures in an array

--- a/src/main/resources/engine.css
+++ b/src/main/resources/engine.css
@@ -197,6 +197,13 @@ context-menu {
     -fx-background-color: -fx-default-text-fill;
 }
 
+.item-array {
+    -fx-background-color: -fx-default-medium;
+    -fx-cursor: hand;
+}
+
+.item-array:hover { -fx-background-color: -fx-default-dark; }
+
 /* Tab Pane */
 
 .tab-pane > .tab-header-area {
@@ -270,27 +277,4 @@ context-menu {
 
 #new-proj-btn:hover {
     -fx-background-color: -fx-default-light;
-}
-
-/* Code Editor */
-/* default text styling */
-#codeArea .text {
-    -fx-fill: -fx-default-text-fill;
-    -fx-font-size: 15px;
-}
-/* Overriding styling for key words */
-#codeArea .keyword {
-    -fx-fill: blue;
-}
-/* Overriding styling for operators */
-#codeArea .operator {
-    -fx-fill: purple;
-}
-
-#codeArea {
-    -fx-background-color: -fx-default-medium;
-}
-
-.lineno {
- -fx-background-color: -fx-default-dark;
 }
