--- a/src/main/resources/engine.css
+++ b/src/main/resources/engine.css
@@ -106,6 +106,28 @@
     -fx-background-color: transparent;
 }
 
+.scroll-bar:horizontal, .scroll-bar:vertical {
+    -fx-background-color:transparent;
+}
+
+.increment-button, .decrement-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+    -fx-background-color: -fx-default-extra-light;
+    -fx-background-radius: 5em;
+}
+
 .dialog-pane {
     -fx-background-color: -fx-default-medium;
 }
@@ -203,6 +225,7 @@ context-menu {
 }
 
 .item-array:hover { -fx-background-color: -fx-default-dark; }
+
 
 /* Tab Pane */
 
