Update the textures to a new layout

--- a/src/main/resources/engine.css
+++ b/src/main/resources/engine.css
@@ -220,11 +220,12 @@ context-menu {
 }
 
 .item-array {
-    -fx-background-color: -fx-default-medium;
+    -fx-background-color: -fx-default-dark;
     -fx-cursor: hand;
 }
 
-.item-array:hover { -fx-background-color: -fx-default-dark; }
+.item-array:hover { -fx-background-color: -fx-default-medium; }
+.item-array.selected { -fx-background-color: -fx-default-extra-light; }
 
 
 /* Tab Pane */
