--- a/src/main/resources/css/harmony.css
+++ b/src/main/resources/css/harmony.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: Montserrat;
-    src: url('fonts/Montserrat/Montserrat-Regular.ttf');
+    src: url('../fonts/Montserrat-Regular.ttf');
 }
 
 /* The Dark Theme For Creating!!! TODO: REMOVE */
