--- a/src/main/resources/engine.fxml
+++ b/src/main/resources/engine.fxml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.web.*?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.EngineController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" stylesheets="@css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.EngineController">
    <children>
       <TabPane fx:id="tabBar" layoutY="28.0" prefHeight="373.0" prefWidth="800.0" style="-fx-border-color: -fx-default-dark;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="28.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -15,7 +27,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchor-section">
                      <children>
-                        <GridPane AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                        <GridPane AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="197.0" />
@@ -69,12 +81,12 @@
                                          <content>
                                              <AnchorPane>
                                                  <children>
-                                                    <GridPane fx:id="texturesArray" gridLinesVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                    <GridPane fx:id="texturesArray" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                       <columnConstraints>
-                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" prefWidth="100.0" />
-                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" prefWidth="100.0" />
-                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" prefWidth="100.0" />
-                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="75.0" prefWidth="100.0" />
+                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
+                                                        <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" prefWidth="100.0" />
                                                       </columnConstraints>
                                                       <rowConstraints>
                                                         <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
@@ -82,11 +94,11 @@
                                                         <RowConstraints minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
                                                       </rowConstraints>
                                                     </GridPane>
-                                                <Button fx:id="newTextureButton" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="3.0" />
                                                  </children>
                                              </AnchorPane>
                                          </content>
                                       </ScrollPane>
+                                      <Button fx:id="newTextureButton" mnemonicParsing="false" style="-fx-background-color: green;" styleClass="default-button" text="New" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="3.0" />
                                  </children>
                               </AnchorPane>
                               <AnchorPane fx:id="texturesInteractables" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -99,12 +111,12 @@
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="249.0" />
                                       </columnConstraints>
                                       <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
                                           <Label alignment="CENTER_RIGHT" styleClass="default-label" text="Name:" />
@@ -112,9 +124,9 @@
                                           <Label alignment="CENTER_RIGHT" styleClass="default-label" text="Location:" GridPane.rowIndex="1" />
                                           <TextField fx:id="textureLocation" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                           <Button fx:id="chooseTextureButton" mnemonicParsing="false" styleClass="default-button" text="Choose Location" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <Button fx:id="deleteTextureButton" mnemonicParsing="false" style="-fx-background-color: #f55442;" styleClass="default-button" text="Delete" GridPane.rowIndex="5" />
                                        </children>
                                     </GridPane>
+                                    <Button fx:id="deleteTextureButton" mnemonicParsing="false" style="-fx-background-color: #f55442;" styleClass="default-button" text="Delete" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="5.0" />
                                  </children>
                               </AnchorPane>
                           </items>
