--- a/src/main/resources/fxml/globalPreferences.fxml
+++ b/src/main/resources/fxml/globalPreferences.fxml
@@ -1,67 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="anchor-section" stylesheets="@../css/harmony.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.harmony.engine.utils.GlobalPrefController">
    <children>
       <ScrollPane fx:id="scrollPane" prefHeight="600.0" prefWidth="800.0" style="-fx-background: transparent;">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="799.0">
+         <content>
+             <GridPane prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                 <columnConstraints>
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="235.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="184.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="158.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="100.0" />
+                     <ColumnConstraints />
+                 </columnConstraints>
+                 <rowConstraints>
+                     <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="65.0" minHeight="65.0" prefHeight="65.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                     <RowConstraints maxHeight="35.0" minHeight="35.0" prefHeight="35.0" vgrow="NEVER" />
+                 </rowConstraints>
                <children>
-                  <Group layoutX="15.0" layoutY="24.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="24.0">
-                     <children>
-                        <Label layoutX="1.0" style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="General" />
-                        <Group layoutY="65.0">
-                           <children>
-                                 <Label layoutY="3.0" styleClass="default-label" text="Theme:" />
-                                 <ComboBox fx:id="theme" layoutX="67.0" prefHeight="27.0" prefWidth="150.0" styleClass="default-combo-box" />
-                           </children>
-                        </Group>
-                        <Group layoutX="1.0" layoutY="113.0">
-                           <children>
-                                 <Label styleClass="default-label" text="Auto-Save:" />
-                                 <CheckBox fx:id="autoSave" layoutX="99.0" layoutY="1.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" />
-                           </children>
-                        </Group>
-                     </children>
-                  </Group>
-                  <Group layoutX="14.0" layoutY="196.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="203.0">
-                     <children>
+                  <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="General" />
+                     <Label styleClass="default-label" text="Theme:" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                     <ComboBox fx:id="theme" prefHeight="27.0" prefWidth="150.0" styleClass="default-combo-box" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                     <Label styleClass="default-label" text="Auto-Save:" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                     <CheckBox fx:id="autoSave" mnemonicParsing="false" prefHeight="18.0" prefWidth="19.0" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       
-                        <Label layoutY="7.0" style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" />
-                        <Group layoutX="1.0" layoutY="67.0">
-                           <children>
-                              <Label styleClass="default-label" text="Draw From Top:" />
-                              <CheckBox fx:id="editorDrawFromTop" layoutX="140.0" layoutY="1.0" mnemonicParsing="false" styleClass="default-check-box" />
-                           </children>
-                        </Group>
-                         <Group layoutX="1.0" layoutY="94.0">
-                             <children>
-                                 <Label layoutY="11.0" styleClass="default-label" text="Pan Multiplier:" />
-                                 <TextField fx:id="panMultiplier" layoutX="129.0" layoutY="8.0" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" />
-                             </children>
-                         </Group>
-                        <Group layoutY="139.0">
-                           <children>
-                              <TextField fx:id="editorBGColor" layoutX="218.0" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" />
-                              <Label layoutY="3.0" styleClass="default-label" text="Editor Background Color:" />
-                           </children>
-                        </Group>
-                        <Group layoutX="2.0" layoutY="177.0">
-                           <children>
-                              <Label layoutY="3.0" styleClass="default-label" text="Outline Color:" />
-                              <TextField fx:id="editorOutlineColor" layoutX="122.0" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" />
-                           </children>
-                        </Group>
-                     </children>
-                  </Group>
-                  <Button fx:id="documentationButton" layoutX="662.0" layoutY="46.0" mnemonicParsing="false" styleClass="default-button" text="Documentation" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="46.0" />
+                        <Label style="-fx-font-size: 30px; -fx-font-family: sans-serif;" styleClass="default-label" text="Editor" GridPane.rowIndex="3" />
+                  <Label styleClass="default-label" text="Draw From Top:" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                  <CheckBox fx:id="editorDrawFromTop" mnemonicParsing="false" styleClass="default-check-box" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                     <Label styleClass="default-label" text="Pan Multiplier:" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                     <TextField fx:id="panMultiplier" prefHeight="27.0" prefWidth="57.0" promptText="1.0" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label styleClass="default-label" text="Editor Background Color:" GridPane.rowIndex="6">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="editorBGColor" prefHeight="27.0" prefWidth="63.0" promptText="35406c" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <Label styleClass="default-label" text="Outline Color:" GridPane.rowIndex="7">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin></Label>
+                  <TextField fx:id="editorOutlineColor" prefHeight="27.0" prefWidth="63.0" promptText="ff0000" styleClass="default-text-field" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                </children>
-            </AnchorPane>
-        </content>
+               <padding>
+                  <Insets left="10.0" top="10.0" />
+               </padding>
+             </GridPane>
+         </content>
       </ScrollPane>
+      <Button fx:id="documentationButton" mnemonicParsing="false" styleClass="default-button" text="Documentation" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="46.0" />
        
        <Button fx:id="applyButton" mnemonicParsing="false" styleClass="default-choose-button" text="Apply" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
        <Button fx:id="cancelButton" mnemonicParsing="false" styleClass="default-button" text="Cancel" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="80.0" />
