Cleaned up the theme

--- a/src/main/resources/css/harmony.css
+++ b/src/main/resources/css/harmony.css
@@ -16,6 +16,10 @@
     -fx-default-text-fill: #ffffff;
 }
 
+.root {
+    -fx-accent: -fx-default-light;
+}
+
 /* Defaults */
 .default-text-field {
     -fx-background-color: -fx-default-dark;
