--- a/src/main/resources/css/harmony.css
+++ b/src/main/resources/css/harmony.css
@@ -5,7 +5,7 @@
     src: url('../fonts/Montserrat-Regular.ttf');
 }
 
-/* The Dark Theme For Creating!!! TODO: REMOVE */
+/* The Dark Theme For Development Only!!! TODO: REMOVE */
 * {
     -fx-tab-color: #70a7ff;
     -fx-tab-selected-color: #4287f5;
@@ -18,6 +18,7 @@
 
 .root {
     -fx-accent: -fx-default-light;
+    -fx-focus-color: transparent;
 }
 
 /* Defaults */
